--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-image: url('wallpaperflare.com_wallpaper.jpg'); background-size: contain;" >
+  <body style="background-image: url('wallpaperflare.com_wallpaper.jpg'); background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;" > 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="background-color: rgba(255, 255, 255, .2)" ></div>
     <!--
