--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,9 +26,13 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-image: url('wallpaperflare.com_wallpaper.jpg'); background-size: contain;" >
+  <body style="background-image: url('wallpaperflare.com_wallpaper.jpg'); background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;" > 
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: rgba(255, 255, 255, .2)" ></div>
+    <div id="root" style="background-color: rgba(255, 255, 255, .5)" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
